// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Metric Registry Test Constructor should create with custom options 1`] = `
Object {
  "collectInterval": 5000,
  "collectProcessMetrics": false,
  "defaultAgeBuckets": 10,
  "defaultAggregator": "sum",
  "defaultBuckets": Array [
    1,
    2,
    3,
    4,
    5,
    0.25,
    0.5,
    1,
    2.5,
    5,
    10,
  ],
  "defaultMaxAgeSeconds": 60,
  "defaultQuantiles": Array [
    0.1,
    0.5,
    0.9,
    0.99,
    0.999,
  ],
  "enabled": false,
  "reporter": "Prometheus",
}
`;

exports[`Test Metric Registry Test Constructor should create with default options 1`] = `
Object {
  "collectInterval": 5000,
  "collectProcessMetrics": false,
  "defaultAgeBuckets": 10,
  "defaultAggregator": "sum",
  "defaultBuckets": Array [
    0.005,
    0.01,
    0.025,
    0.05,
    0.1,
    0.25,
    0.5,
    1,
    2.5,
    5,
    10,
  ],
  "defaultMaxAgeSeconds": 60,
  "defaultQuantiles": Array [
    0.5,
    0.9,
    0.95,
    0.99,
    0.999,
  ],
  "enabled": true,
  "reporter": false,
}
`;
